fix: white space no wrap header liquidity

--- a/src/pages/Pools/components/Header/Header.module.scss
+++ b/src/pages/Pools/components/Header/Header.module.scss
@@ -181,6 +181,7 @@
       font-size: 16px;
       font-weight: 400;
       line-height: 150%;
+      white-space: nowrap;
 
       @media (max-width: 575px) {
         font-size: 16px;
